# CoPipes

./: CMakeLists.txt
cmake_modules/: FindCopipes.cmake
include/Copipes/: Copipes.hpp  Puller.hpp  PushSplit.hpp  Pusher.hpp  Sink.hpp  Source.hpp
test/: temp.cpp  test1.cpp
